@@ -33,8 +33,6 @@ import java.nio.charset.Charset;
 import java.text.NumberFormat;
 import java.util.HashMap;
 
-@SuppressWarnings("unchecked")
-
 /**
  * A stream based parser for parsing delimited text data from a file or a
  * stream.
@@ -510,7 +508,7 @@ public class CsvReader {
 
 		// use headersHolder.Length here in case headers is null
 		for (int i = 0; i < headersHolder.Length; i++) {
-			headersHolder.IndexByName.put(headers[i], new Integer(i));
+			headersHolder.IndexByName.put(headers[i], Integer.valueOf(i));
 		}
 	}
 
@@ -1241,7 +1239,7 @@ public class CsvReader {
 			headersHolder.Headers[i] = columnValue;
 
 			// if there are duplicate header names, we will save the last one
-			headersHolder.IndexByName.put(columnValue, new Integer(i));
+			headersHolder.IndexByName.put(columnValue, Integer.valueOf(i));
 		}
 
 		if (result) {
@@ -1753,12 +1751,12 @@ public class CsvReader {
 
 		public int Length;
 
-		public HashMap IndexByName;
+		public HashMap<String, Integer> IndexByName;
 
 		public HeadersHolder() {
 			Headers = null;
 			Length = 0;
-			IndexByName = new HashMap();
+			IndexByName = new HashMap<String, Integer>();
 		}
 	}
 
